Consertado a documentação e retirado alguns codigos do sistema
